Added some modals

--- a/app/views/portfolios/new.html.erb
+++ b/app/views/portfolios/new.html.erb
@@ -1,13 +1,11 @@
-<h1>New Portfolio</h1>
+<div class="text-center">
+    <h1>Make your portfolio</h1>
 
-<br><text>
-  Select a time when you would have invested in a portfolio.
-<br>
-  See how much you could have gained!
-</text>
-<br>
-<br>
+    <br><br>
+    <p class="lead">Cryptocurrencies can be grouped such that risk is minimised and return is maximised.</p>
+    <br>
+    <p class="lead">Select a time when you would have invested in a portfolio.</p>
+    <br>
 
 <%= render 'form' %>
-
-<%= link_to 'Back to main page', currencies_path %>
+</div>
