--- a/app/views/currencies/index.html.erb
+++ b/app/views/currencies/index.html.erb
@@ -19,7 +19,7 @@
     <div class="thumbnail">
       <div class="caption">
         <h3>Portfolio</h3>
-        <b>See how much you can gain by holding individual cryptocurrencies.</b>
+        <b>See how much you can gain by assembling a portfolio.</b>
         <a href="portfolios/new" class="btn btn-primary btn-lg active" role="button">Create portfolio</a>
       </div>
     </div>
