--- a/app/views/portfolios/_form.html.erb
+++ b/app/views/portfolios/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@portfolio) do |f| %>
+<%= form_for(@portfolio, :html => {:class => "form-horizontal center"}) do |f| %>
   <% if @portfolio.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@portfolio.errors.count, "error") %> prohibited this portfolio from being saved:</h2>
@@ -15,11 +15,12 @@
     <%= f.label :start_date %><br>
     <%= f.date_select :start_date %>
   </div>
+
   <div class="field">
     <%= f.label :end_date %><br>
     <%= f.date_select :end_date %>
   </div>
-  <div class="actions">
+  <div class="actions form-group" data-toggle="tooltip" data-placement="bottom" title="See how much you would have gained!">
     <%= f.submit %>
   </div>
 <% end %>
