--- a/app/views/portfolios/show.html.erb
+++ b/app/views/portfolios/show.html.erb
@@ -128,7 +128,7 @@
           <br>
 
           <button type="button" class="btn btn-info" data-toggle="modal" data-target="#weightsModal">
-            How where the weights computed?
+            How were the weights computed?
           </button>
           <!-- Modal -->
           <div class="modal fade" id="weightsModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
