--- a/app/views/marketplaces/show.html.erb
+++ b/app/views/marketplaces/show.html.erb
@@ -58,11 +58,9 @@
       <div class="modal-content">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-          <h4 class="modal-title" id="myModalLabel">The Markowitz Model</h4>
+          <h4 class="modal-title" id="myModalLabel">Impact of correlations</h4>
         </div>
         <div class="modal-body">
-          Impact of correlations
-          <br><br>
           Cryptocurrencies which display a small correlation between each other vary in price very differently.
           Therefore they can be used to reduce each other's risk.
           <br>
@@ -90,11 +88,9 @@
       <div class="modal-content">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-          <h4 class="modal-title" id="myModalLabel">The Markowitz Model</h4>
+          <h4 class="modal-title" id="myModalLabel">Financial Models</h4>
         </div>
         <div class="modal-body">
-          Financial Models
-          <br><br>
           Financial models are mathematical constructs which try to describe the price of a set of assets.
           I am using them to see if the cryptocurrencies analysed are well priced.
         </div>
@@ -120,11 +116,9 @@
           <div class="modal-content">
             <div class="modal-header">
               <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-              <h4 class="modal-title" id="myModalLabel">The Markowitz Model</h4>
+              <h4 class="modal-title" id="myModalLabel">Beta</h4>
             </div>
             <div class="modal-body">
-              Beta
-              <br><br>
               Beta is a measure of connection between an asset and a market. The stronger the connection, the higher the return that is expected from the asset.
               <br>
               If an asset has a low Beta and high returns, then it is desirable.
