--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -5,7 +5,7 @@
 
 <p>
     <strong>Source:</strong>
-    <a href="url"><%= @article.url %></a>
+    <%= link_to "#{@article.url}", @article.url %>
 </p>
 
 <p>
